<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MapsActivity" >

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/mainText"
        style="@style/ForTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/destination_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9" >

        <LinearLayout
            android:id="@+id/ll_details_for_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView01"
                    style="@style/ForText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/textDistance"
                    style="@style/ForTextDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    style="@style/ForText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/estimated_time" />

                <TextView
                    android:id="@+id/textEstimated"
                    style="@style/ForTextDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textTimeElapsed"
                    style="@style/ForText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/time_elapsed" />

                <TextView
                    android:id="@+id/textElapsed"
                    style="@style/ForTextDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView03"
                    style="@style/ForText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/target_time" />

                <TextView
                    android:id="@+id/textTarget"
                    style="@style/ForTextDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>